change var name

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -226,9 +226,9 @@
 // --------------
 // w3c: FF 16, Opera 12.1, MSIE 10
 // -webkit: Chrome -26; Safari -6
-.transition(@attribute: all, @duration: .2s, @ease: ease-out, @delay: 0) {
-	-webkit-transition: @attribute @duration @ease @delay;
-	transition: @attribute @duration @ease @delay;
+.transition(@property: all, @duration: .2s, @ease: ease-out, @delay: 0) {
+	-webkit-transition: @property @duration @ease @delay;
+	transition: @property @duration @ease @delay;
 }
 
 
