--- a/less/reset.less
+++ b/less/reset.less
@@ -233,7 +233,7 @@ textarea {
 // Improves appearance and consistency in ie 7.
 // -------------------------
 
-.ie7 {
+.lt-ie8 {
 	button,
 	input,
 	select,
@@ -296,7 +296,7 @@ input[type="radio"] {
 // Removes excess padding in IE 7.
 // -------------------------
 
-.ie7 {
+.lt-ie8 {
 	input[type="checkbox"],
 	input[type="radio"] {
 		height: 13px;
