--- a/less/reset.less
+++ b/less/reset.less
@@ -1,8 +1,8 @@
 // Reset
 // ------------------------------------------------------------------------
-// based on Reset.less v.2.0.1
-// Adapted from Normalize.css http://github.com/necolas/normalize.css
-// re-add support for IE 7
+// based on Reset.less
+// Adapted from Normalize.css http://github.com/necolas/normalize.css v.2.0.1
+// re-add support for IE 7 (requires 'lt-ie8' and 'ie7' classes in HTML tag)
 
 
 
