--- a/less/style.less
+++ b/less/style.less
@@ -1,11 +1,12 @@
 //imports
+//-------------------------------------
 
 @import "vars";
 @import "mixins";
+
 @import "reset";
+@import "fonts";
 @import "preset";
 
-//project specfic code
-.test {
-	color: @brand * 2;
-}
+@import "project-main";
+@import "project-responsive";
