--- a/css/style-example2.css
+++ b/css/style-example2.css
@@ -179,103 +179,6 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-/*--------------- grid ------------------- */
-.row {
-  margin-left: -20px;
-  *zoom: 1;
-}
-.row:before,
-.row:after {
-  display: table;
-  content: "";
-  line-height: 0;
-}
-.row:after {
-  clear: both;
-}
-[class*="span"] {
-  float: left;
-  min-height: 1px;
-  margin-left: 20px;
-}
-.container,
-.navbar-static-top .container,
-.navbar-fixed-top .container,
-.navbar-fixed-bottom .container {
-  width: 940px;
-}
-.span12 {
-  width: 940px;
-}
-.span11 {
-  width: 860px;
-}
-.span10 {
-  width: 780px;
-}
-.span9 {
-  width: 700px;
-}
-.span8 {
-  width: 620px;
-}
-.span7 {
-  width: 540px;
-}
-.span6 {
-  width: 460px;
-}
-.span5 {
-  width: 380px;
-}
-.span4 {
-  width: 300px;
-}
-.span3 {
-  width: 220px;
-}
-.span2 {
-  width: 140px;
-}
-.span1 {
-  width: 60px;
-}
-.offset12 {
-  margin-left: 980px;
-}
-.offset11 {
-  margin-left: 900px;
-}
-.offset10 {
-  margin-left: 820px;
-}
-.offset9 {
-  margin-left: 740px;
-}
-.offset8 {
-  margin-left: 660px;
-}
-.offset7 {
-  margin-left: 580px;
-}
-.offset6 {
-  margin-left: 500px;
-}
-.offset5 {
-  margin-left: 420px;
-}
-.offset4 {
-  margin-left: 340px;
-}
-.offset3 {
-  margin-left: 260px;
-}
-.offset2 {
-  margin-left: 180px;
-}
-.offset1 {
-  margin-left: 100px;
-}
 .row-fluid {
   width: 100%;
   *zoom: 1;
@@ -447,7 +350,6 @@ table {
   margin-left: 8.510638297%;
   *margin-left: 8.404255318276597%;
 }
-/*----------------------------------------- */
 ::-moz-selection {
   background: #222222;
   color: #ffffff;
@@ -505,8 +407,21 @@ p {
 blockquote {
   margin: 1em 40px;
 }
+.hide-text {
+  font: 0/0 a;
+  color: transparent;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+}
+.hide-text br {
+  display: none;
+}
 html {
   font: 14px/1.4em sans-serif;
+}
+body {
+  background-color: #be2f33;
 }
 a {
   text-decoration: none;
@@ -519,8 +434,9 @@ blockquote:after {
 }
 .outer-wrapper {
   width: 100%;
+  padding: 1em 0 0;
 }
-.inner-wrapper {
+.outer-wrapper > .row-fluid {
   width: 940px;
   margin: 0 auto;
   position: relative;
@@ -528,10 +444,7 @@ blockquote:after {
 }
 .header {
   padding: 20px 0 0;
-  background: #ff9400;
-}
-.main-nav {
-  margin-bottom: 20px;
+  background: #099;
 }
 .main-nav-inner-item {
   display: inline-block;
@@ -545,18 +458,19 @@ blockquote:after {
   display: block;
   padding: 5px 10px;
   line-height: 1em;
-  background: #ddd;
+  background: #a60000;
   border-radius: 3px;
+  color: #fff;
 }
 .main-nav-inner-content:hover {
   background-color: #000;
   color: #fff;
 }
 .main-section-1 {
-  background-color: #cef500;
+  background: url(../images/ticks.png);
 }
 .main-section-2 {
-  background-color: #ffd600;
+  background-color: #fff;
 }
 .aside {
   padding: 10px 0 0;
