--- a/less/mixins.less
+++ b/less/mixins.less
@@ -225,12 +225,37 @@
 }
 
 
-
-
-// The Grid
-// from bootstrap: https://github.com/twitter/bootstrap/blob/master/less/mixins.less#L546
+// Grid System
+// https://raw.github.com/jen4web/bootstrap-2.3.2-workshop/master/less/mixins.less
 //-----------------------------------------------------
 
+// Centered container element
+.container-fixed() {
+	margin-right: auto;
+	margin-left: auto;
+	.clearfix();
+}
+
+// Table columns
+.tableColumns(@columnSpan: 1) {
+	float: none; // undo default grid column styles
+	width: ((@gridColumnWidth) * @columnSpan) + (@gridGutterWidth * (@columnSpan - 1)) - 16; // 16 is total padding on left and right of table cells
+	margin-left: 0; // undo default grid column styles
+}
+
+// Make a Grid
+// Use .makeRow and .makeColumn to assign semantic layouts grid system behavior
+.makeRow() {
+	margin-left: @gridGutterWidth * -1;
+	.clearfix();
+}
+.makeColumn(@columns: 1, @offset: 0) {
+	float: left;
+	margin-left: (@gridColumnWidth * @offset) + (@gridGutterWidth * (@offset - 1)) + (@gridGutterWidth * 2);
+	width: (@gridColumnWidth * @columns) + (@gridGutterWidth * (@columns - 1));
+}
+
+// The Grid
 #grid {
 
 	.core (@gridColumnWidth, @gridGutterWidth) {
